<resources>
    <string name="account_err_insufficient_funds">Insufficient funds for sending transaction</string>
    <string name="account_err_insufficient_funds_for_amount">Insufficient funds: balance %1$s %2$s</string>
    <string name="account_err_not_enough_balance_to_pay_fee">Not enough balance to pay fee</string>
    <string name="account_err_not_loaded_yet">Account didn\'t loaded yet…</string>
    <string name="action_see_more">See More</string>
    <string name="address_book_err_address_is_null">Address can\'t be null</string>
    <string name="address_book_err_not_found">Not found in address book</string>
    <string name="address_book_err_unknown_type">Unknown address type %1$s</string>
    <string name="alert_copied">Copied!</string>
    <string name="app_version_format">Version: %1$s</string>
    <string name="at">\@</string>
    <string name="attention_exchange_rate">The final amount depends on the exchange rate at the moment of transaction</string>
    <string name="attention_please_wait">Please, wait</string>
    <string name="attention_remove_liquidity_rate">The final amount depends on the pool ratio at the moment of transaction.</string>
    <string name="auth_err_mnemonic_cant_be_empty">Mnemonic can\'t be empty</string>
    <string name="balance_last_updated_main">(Updated %1$d %2$s ago)</string>
    <string name="balance_last_updated_never_main">(Never updated)</string>
    <string name="balance_last_updated_never_others">
        <![CDATA[Last updated <b>never</b>]]>
    </string>
    <string name="balance_last_updated_now_main">(Updated just now)</string>
    <string name="balance_last_updated_now_others">
        <![CDATA[Last updated <b>now</b>]]>
    </string>
    <string name="balance_last_updated_others">
        <![CDATA[Last updated <b>%1$d %2$s</b> ago]]>
    </string>
    <string name="balance_last_updated_sync">
        <![CDATA[Last updated <b>sync…</b>]]>
    </string>
    <string name="balance_last_updated_sync_in_progress">Sync…</string>
    <string name="balance_last_updated_sync_main">(sync…)</string>
    <string name="bip_per_min_label">BIP per minute</string>
    <string name="btn_activate">Activate Wallet</string>
    <string name="btn_add_liquidity">Add Liquidity</string>
    <string name="btn_add_message">Add Message</string>
    <string name="btn_add_wallet">Add New Wallet</string>
    <string name="btn_advanced_mode">Advanced mode</string>
    <string name="btn_all_txs">All Transactions</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_confirm_send">Confirm and Send</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_create_wallet">Create Wallet</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_draggable">Drag the dialog</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_exchange">Exchange</string>
    <string name="btn_exchange_coins">Exchange Coins</string>
    <string name="btn_explorer">Explorer</string>
    <string name="btn_express_tx">Express transaction</string>
    <string name="btn_generate_wallet">Generate New Wallet</string>
    <string name="btn_help">Help</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_official_channel">Our Channel</string>
    <string name="btn_ok">OK</string>
    <string name="btn_open_settings">Open system settings</string>
    <string name="btn_remove_liquidity">Remove Liquidity</string>
    <string name="btn_remove_wallet">Remove Wallet</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_save">Save</string>
    <string name="btn_save_address">Save This Address</string>
    <string name="btn_save_changes">Save Changes</string>
    <string name="btn_scan_qr">Scan QR</string>
    <string name="btn_send">Send</string>
    <string name="btn_settings">Open settings</string>
    <string name="btn_share_address">Share address</string>
    <string name="btn_share_tx">Share Transaction</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_support_chat">Support Chat</string>
    <string name="btn_unbond">Unbond</string>
    <string name="btn_use_max">Use max</string>
    <string name="btn_view_tx">View Transaction</string>
    <string name="cd_action">Action</string>
    <string name="cd_choose">Choose</string>
    <string name="cd_choose_account">Choose your account</string>
    <string name="cd_logo">Logotype</string>
    <string name="cd_open_transactions">Open all transactions</string>
    <string name="cd_qr_code">QR Code</string>
    <string name="cd_qr_scan">Scan QR code</string>
    <string name="chooser_share_transaction">Share transaction</string>
    <string name="coin_err_not_found">Coin not found</string>
    <string name="copy">Copy</string>
    <string name="day_today">Today</string>
    <string name="decimal_digits">0,1,2,3,4,5,6,7,8,9,.,,</string>
    <string name="deeplink_amount_max_amount_to_spend">Maximum Amount To Spend</string>
    <string name="deeplink_check_no_redeem_fee">You don\'t pay transaction fee.</string>
    <string name="deeplink_err_empty_multisend_recipients">Multisend transaction must contains at least 1 target address</string>
    <string name="deeplink_err_no_tx_data_passed">No transaction data passed</string>
    <string name="deeplink_err_unable_to_parse_transaction">Unable to parse transaction url</string>
    <string name="deeplink_err_unknown_deeplink_format">Unknown deeplink format</string>
    <string name="deeplink_label_address">Address</string>
    <string name="deeplink_label_amount">Amount</string>
    <string name="deeplink_label_burnable">Burnable</string>
    <string name="deeplink_label_coin">Coin</string>
    <string name="deeplink_label_coin_name">Coin Name</string>
    <string name="deeplink_label_coin_prefix">Coin</string>
    <string name="deeplink_label_coin_to_buy">Coin To Buy</string>
    <string name="deeplink_label_coin_to_sell">Coin To Sell</string>
    <string name="deeplink_label_commission">Commission</string>
    <string name="deeplink_label_commission_percent">Commission Percent</string>
    <string name="deeplink_label_control_address">Control address</string>
    <string name="deeplink_label_from">From</string>
    <string name="deeplink_label_height">Height</string>
    <string name="deeplink_label_initial_amount">Initial Amount</string>
    <string name="deeplink_label_liquidity">Liquidity</string>
    <string name="deeplink_label_max_supply">Max Supply</string>
    <string name="deeplink_label_max_volume">Max volume</string>
    <string name="deeplink_label_min_amount_to_get">Minimum Amount To Get</string>
    <string name="deeplink_label_min_volume_of_prefix">Min Volume of</string>
    <string name="deeplink_label_mintable">Mintable</string>
    <string name="deeplink_label_new_commission">New Commission</string>
    <string name="deeplink_label_new_owner">New Owner</string>
    <string name="deeplink_label_new_pubkey">New Public Key</string>
    <string name="deeplink_label_owner_address">Owner address</string>
    <string name="deeplink_label_pubkey">Public Key</string>
    <string name="deeplink_label_reserve">Reserve</string>
    <string name="deeplink_label_reward_address">Reward address</string>
    <string name="deeplink_label_send_youre_selling">You\'re selling</string>
    <string name="deeplink_label_threshold">Threshold</string>
    <string name="deeplink_label_to">To</string>
    <string name="deeplink_label_to_n_recipients">To %1$s recipient(s)</string>
    <string name="deeplink_label_version">Version</string>
    <string name="deeplink_label_volume">Volume</string>
    <string name="deeplink_label_volume_of_prefix">Volume of</string>
    <string name="deeplink_label_weight_n">Weight: %1$d</string>
    <string name="deeplink_label_with_n_addresses">With %1$d address(es)</string>
    <string name="deeplink_label_youre_adding_liquidity">You\'re adding liquidity</string>
    <string name="deeplink_label_youre_burning_token">You\'re burning token</string>
    <string name="deeplink_label_youre_buying">You\'re buying</string>
    <string name="deeplink_label_youre_buying_pool">You\'re buying within pool</string>
    <string name="deeplink_label_youre_changing_coin_owner">You\'re changing coin owner</string>
    <string name="deeplink_label_youre_creating_coin">You\'re creating coin</string>
    <string name="deeplink_label_youre_creating_multisig">You\'re creating MultiSig address</string>
    <string name="deeplink_label_youre_creating_pool">You\'re creating swap pool</string>
    <string name="deeplink_label_youre_creating_token">You\'re creating token</string>
    <string name="deeplink_label_youre_declaring_candidacy">You\'re declaring candidacy</string>
    <string name="deeplink_label_youre_delegating">You\'re delegating</string>
    <string name="deeplink_label_youre_editing_cand">You\'re editing candidate</string>
    <string name="deeplink_label_youre_editing_cand_commission">You\'re editing candidate commission</string>
    <string name="deeplink_label_youre_editing_cand_pubkey">You\'re editing candidate public key</string>
    <string name="deeplink_label_youre_editing_multisig">You\'re editing MultiSig address</string>
    <string name="deeplink_label_youre_minting_token">You\'re minting token</string>
    <string name="deeplink_label_youre_moving_stake_from">You\'re moving stake from</string>
    <string name="deeplink_label_youre_multisending">You\'re multi-sending</string>
    <string name="deeplink_label_youre_recreating_coin">You\'re re-creating coin</string>
    <string name="deeplink_label_youre_recreating_token">You\'re re-creating token</string>
    <string name="deeplink_label_youre_redeeming_check">You\'re redeeming check</string>
    <string name="deeplink_label_youre_removing_liquidity">You\'re removing liquidity</string>
    <string name="deeplink_label_youre_selling_all">You\'re selling (sell all)</string>
    <string name="deeplink_label_youre_selling_all_pool">You\'re selling all within pool</string>
    <string name="deeplink_label_youre_selling_pool">You\'re selling within pool</string>
    <string name="deeplink_label_youre_sending">You\'re sending</string>
    <string name="deeplink_label_youre_setting_halt_block">You\'re setting halt block</string>
    <string name="deeplink_label_youre_switching_cand_off">You\'re switching off candidate</string>
    <string name="deeplink_label_youre_switching_cand_on">You\'re switching on candidate</string>
    <string name="deeplink_label_youre_unbonding">You\'re unbonding</string>
    <string name="deeplink_label_youre_voting_for_price">You\'re voting for price</string>
    <string name="deeplink_label_youre_voting_for_update">You\'re voting for update</string>
    <string name="deeplnk_label_crr">CRR (constant reserve ratio)</string>
    <string name="delegation_title">Delegated Balance</string>
    <string name="dialog_title_add_contact">Add New Address</string>
    <string name="dialog_title_add_wallet">Add New Wallet</string>
    <string name="dialog_title_edit_wallet">Edit Wallet</string>
    <string name="filter_pools_staked_only">Staked Only</string>
    <string name="filter_pools_yield_farm">Yield Farm</string>
    <string name="filter_tx_all">All</string>
    <string name="hint_address">Enter address</string>
    <string name="input_hint_addressbook_address">Mx Address</string>
    <string name="input_hint_addressbook_title">Add a title to the address</string>
    <string name="input_hint_seed">Seed-Phrase</string>
    <string name="input_hint_wallet_seed">Or enter the seed-phrase of your existing wallet</string>
    <string name="input_hint_wallet_title">Title</string>
    <string name="input_hint_wallet_title_later">Add a title to your wallet (you can do it later)</string>
</resources>