<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) by MinterTeam. 2021
  ~ @link <a href="https://github.com/MinterTeam">Org Github</a>
  ~ @link <a href="https://github.com/edwardstock">Maintainer Github</a>
  ~
  ~ The MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_rounded"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_rounded"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_edges">

        <ImageView
            android:id="@+id/dialog_draggable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_edges_half"
            android:contentDescription="@string/btn_draggable"
            android:src="@drawable/shape_draggable" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_edges_medium"
            android:layout_marginTop="@dimen/margin_edges"
            android:layout_marginEnd="@dimen/margin_edges_medium"
            android:fontFamily="@font/_inter_semi_bold"
            android:text="@string/dialog_title_add_contact"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.edwardstock.inputfield.InputField
                android:id="@+id/input_address"
                style="@style/Input"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges_medium"
                android:hint="@string/hint_address"
                android:maxLength="42"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions|textMultiLine"
                android:maxLines="4"
                android:nextFocusDown="@id/input_title"
                android:textAllCaps="false"
                app:fieldName="address"
                app:label="@string/input_hint_addressbook_address"
                tools:text="Mx1122334455667788990011223344556677889900" />

            <com.edwardstock.inputfield.InputField
                android:id="@+id/input_title"
                style="@style/Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges_medium"
                android:layout_marginEnd="@dimen/margin_edges_medium"
                android:hint="@string/input_hint_wallet_title"
                android:inputType="textMultiLine"
                android:textAllCaps="false"
                app:fieldName="title"
                app:label="@string/input_hint_addressbook_title" />

            <network.minter.bipwallet.internal.views.widgets.WalletButton
                android:id="@+id/action_submit"
                style="@style/Wallet.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges_medium"
                android:layout_marginTop="@dimen/margin_edges"
                android:layout_marginEnd="@dimen/margin_edges_medium"
                android:enabled="false"
                android:text="@string/btn_save" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_edges" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>