<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) by MinterTeam. 2020
  ~ @link <a href="https://github.com/MinterTeam">Org Github</a>
  ~ @link <a href="https://github.com/edwardstock">Maintainer Github</a>
  ~
  ~ The MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_dialog_rounded"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_edges">

        <ImageView
            android:id="@+id/dialog_draggable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_edges_half"
            android:contentDescription="@string/btn_draggable"
            android:src="@drawable/shape_draggable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_edges_medium"
            android:layout_marginTop="@dimen/margin_edges"
            android:layout_marginEnd="@dimen/margin_edges_medium"
            android:fontFamily="@font/_inter_semi_bold"
            android:text="@string/dialog_title_edit_wallet"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_draggable" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.edwardstock.inputfield.InputField
                android:id="@+id/input_title"
                style="@style/Input"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="@dimen/margin_edges_medium"
                android:maxLength="18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges_medium"
                app:fieldName="title"
                app:errorEnabled="false"
                android:hint="@string/input_hint_wallet_title"
                android:inputType="textMultiLine"
                tools:text="ABc afaafa efakefaelfaefae faefaekfaef aefakefnalef"
                app:label="@string/input_hint_wallet_title_later"
                app:labelEnabled="false" />

            <TextView
                android:id="@+id/error_text"
                style="@style/Wallet.EditText.Error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_edges_half"
                android:layout_marginEnd="@dimen/margin_edges_medium"
                android:paddingStart="@dimen/margin_edges_medium"
                android:textAlignment="center"
                android:textColor="@color/errorColor"
                android:visibility="gone"
                tools:text="Sample error"
                tools:visibility="visible" />


            <network.minter.bipwallet.internal.views.widgets.WalletButton
                android:id="@+id/submit"
                style="@style/Wallet.Button.Green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges_medium"
                android:layout_marginTop="@dimen/margin_edges"
                android:layout_marginEnd="@dimen/margin_edges_medium"
                android:enabled="false"
                android:text="@string/btn_save_changes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/error_text" />

            <network.minter.bipwallet.internal.views.widgets.WalletButton
                android:id="@+id/action_delete"
                style="@style/Wallet.Button.Red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_edges_medium"
                android:layout_marginTop="@dimen/margin_edges"
                android:layout_marginEnd="@dimen/margin_edges_medium"
                android:text="@string/btn_remove_wallet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submit" />


            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_edges_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/action_delete" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>